# hojin-programming

./: .gitignore  README.md  main.py  pyproject.toml
jd_analyzer/: notion_api_test.ipynb  notion_client.py
langgraph/: 01_langchain_VS_langgraph.ipynb  01_langchain_VS_langgraph.py  02_retrieval.ipynb  03_2_retrieval.ipynb  04_rewrite.ipynb
langgraph/data/: income_tax.doc
mini_airflow/: dag.py  main.ipynb  main.py
